# easystr

./: .gitignore  CMakeLists.txt  README.md
include/: easymem.h  easystr.h
src/: easymem.c  easystr.c  main.c
